# imdnew

./: .kdev_include_paths  CMakeLists.txt  imd.kdev4
.kdev4/: imd.kdev4
acq_img/: CMakeLists.txt  imgAcq.cpp  imgAcq.h  imgAcqnvv.cpp
acq_img/conf/: config.ini
app/: app.xml
collnlearn/: CMakeLists.txt  collectnlearn.cpp  collectnlearn.h  collnlearnmain.cpp  ml.cpp  ml.h
collnlearn/conf/: collnlearnconfig.ini
kpe/: CMakeLists.txt  kpe.cpp  kpe.h  kpemain.cpp  utility.cpp  utility.h
